make switch and other changes

--- a/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.css
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.css
@@ -32,7 +32,15 @@
   color: #6739E9;
   text-decoration: underline;
 }
-
+.back{
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 700;
+  color: #6739E9;
+  text-decoration: underline;
+  
+}
 .compare-link img {
   margin-right: 5px;
   vertical-align: middle;
