--- a/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.html
@@ -1,6 +1,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
 
-<button mat-raised-button color="primary" (click)="goBack()">Back</button>
+<button  class="back" (click)="goBack()">Back</button>
 <div class="top-right-link">
   <a [routerLink]="['/map']" class="compare-link">
     <img src="assets/icons/AI.png" alt="AI Icon">
