--- a/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.html
@@ -8,7 +8,7 @@
       {{ getTotalCO2Savings() }}/{{ targetGoal }} kgCO2e
       <i
         class="info-icon"
-        title="Info">ℹ️</i>
+        title="Info"><img class="info" src="../../assets/info.svg"></i>
     </p>
     
     <!-- Tooltip for scope targets -->
