--- a/decarbFrontEnd/src/app/decarb-journey/decarb-quartile-section/decarb-quartile-section.component.css
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-quartile-section/decarb-quartile-section.component.css
@@ -113,6 +113,15 @@ input[type="checkbox"] {
   color: green;
   font-weight: bold;
 }
+.scope-headings{
+  padding-left:90px;
+  font-size: 20px;
+  text-transform: capitalize;
+}
 
-  
+
+.step-content.ngIf {
+  max-height: 500px;
+}
+ 
   
