--- a/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope2-steps/scope2-steps.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope2-steps/scope2-steps.component.html
@@ -54,7 +54,7 @@
           </ng-container>
         </div>
         <div class="top-right-link">
-          <a [routerLink]="['/make-switch']" class="switch-link">
+          <a [routerLink]="['/make-switch']" class="switch-link"(click)="onMakeSwitchClick(stepData)">
             <img src="assets/forward.svg" alt="AI Icon"> Make this switch now
           </a>
         </div>
