--- a/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope3-steps/scope3-steps.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope3-steps/scope3-steps.component.html
@@ -1,6 +1,7 @@
 <div class="step-details" position="relative">
   <div class="scope-header">
     <!-- Check/Uncheck Icon (Moved Outside of Bottom Line) -->
+     <div class="check-box-container">
     <div class="check-box" (click)="handleClick()">
       <ng-container *ngIf="stepData.isCompleted; else unchecked">
         <img src="../../assets/checked.svg" alt="Checked" class="checkbox-icon" />
@@ -9,12 +10,10 @@
         <img src="../../assets/add.svg" alt="Unchecked" class="checkbox-icon" />
       </ng-template>
     </div>
-    <div 
-    class="vertical-line" 
+<div class="vertical-line" 
     [style.height.px]="calculateLineHeight()" 
-    [style.backgroundColor]="stepData.isCompleted ? 'teal' : 'white'"
-    style="position: absolute; left: 2.5%; top: 100%; width: 1px; z-index: index 0;">
-  </div>
+    [style.backgroundColor]="stepData.isCompleted ? 'teal' : 'white'">
+    </div></div>
 
 
     <!-- Step Header with 20px Gap -->
@@ -44,18 +43,18 @@
       <div class="svg-container">
         <div class="implement">
           <!-- Difficulty Level -->
-          <ng-container *ngIf="stepData.transition >= 1 && stepData.transition < 3">
+          <ng-container *ngIf="stepData.difficulty >= 1 && stepData.difficulty < 3">
             <img src="../../assets/low_imp.svg" alt="Difficulty Level 1-3" />Easy Implementation
           </ng-container>
-          <ng-container *ngIf="stepData.transition >= 3 && stepData.transition < 6">
+          <ng-container *ngIf="stepData.difficulty >= 3 && stepData.difficulty < 6">
             <img src="../../assets/meduim_imp.svg" alt="Difficulty Level 3-6" />Medium Implementation
           </ng-container>
-          <ng-container *ngIf="stepData.transition >= 6 && stepData.transition <= 9">
+          <ng-container *ngIf="stepData.difficulty >= 6 && stepData.difficulty <= 9">
             <img src="../../assets/high_imp.svg" alt="Difficulty Level 6-9" />Difficult Implementation
           </ng-container>
         </div>
         <div class="top-right-link">
-          <a [routerLink]="['/make-switch']" class="switch-link">
+          <a [routerLink]="['/make-switch']" class="switch-link"(click)="onMakeSwitchClick(stepData)">
             <img src="assets/forward.svg" alt="AI Icon"> Make this switch now
           </a>
         </div>
@@ -66,11 +65,11 @@
         <ul *ngIf="stepData?.providerInfo?.length">
           <li *ngFor="let provider of stepData?.providerInfo" class="provider-item">
             <strong>{{ provider.name }}</strong> - {{ provider?.details }}
-            <br class="break-lines">
+            <br>
             Renewable Percentage: {{ provider?.renewablePercentage }}%
-            <br class="break-lines">
+            <br>
             Phone: {{ provider?.phone }}
-            <br class="break-lines">
+            <br>
             <a *ngIf="provider?.website" [href]="provider?.website" target="_blank">Visit Website</a>
           </li>
         </ul>
@@ -79,7 +78,7 @@
 
     <!-- Fallback Message -->
     <div *ngIf="stepData?.providerInfo?.length === 0">
-      <p class="error-data">No provider information available.</p>
+      <p>No provider information available.</p>
     </div>
 
     <!-- Savings Information -->
