Added route button

--- a/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.html
@@ -7,7 +7,12 @@
     See how you compare with other companies
   </a>
 </div>
-
+<div class="top-right-link">
+  <a [routerLink]="['/anomaly-detection']" class="compare-link">
+    <img src="assets/icons/AI.png" alt="AI Icon">
+    Detect Anomalies
+  </a>
+</div>
 <div class="decarbonize-header">
   <h1>Your decarbonization journey with AI</h1>
   
