--- a/decarbFrontEnd/src/app/decarb-journey/decarb-quartile-section/decarb-quartile-section.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-quartile-section/decarb-quartile-section.component.html
@@ -22,7 +22,7 @@
     <app-scope1-step
       *ngSwitchCase="'Scope1'"
       [stepData]="step"
-      (stepToggled)="onStepToggled(step)">
+      (stepToggled)="onStepToggling(step);">
     </app-scope1-step>
 
     <!-- Scope 2 -->
@@ -34,7 +34,7 @@
     <app-scope2-step
       *ngSwitchCase="'Scope2'"
       [stepData]="step"
-      (stepToggled)="onStepToggled(step)">
+      (stepToggled)="onStepToggling(step); onItemChecked($event); onStepToggled(step)">
     </app-scope2-step>
 
     <!-- Scope 3 -->
@@ -46,7 +46,7 @@
     <app-scope3-step
       *ngSwitchCase="'Scope3'"
       [stepData]="step"
-      (stepToggled)="onStepToggled(step)">
+      (stepToggled)="onStepToggling(step); onItemChecked($event); onStepToggled(step)">
     </app-scope3-step>
 
   </ng-container>
